--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "express": "^4.21.2",
     "pg": "^8.14.1",
     "sqlite3": "^5.1.7"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
+
