--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
+  "name": "express-memo-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "pg": "^8.14.1",
     "sqlite3": "^5.1.7"
-  },
-  "scripts": {
-    "start": "node server.js"
   }
 }
 
